# omnibet-lab

./: .gitignore  README.md  requirements-storage.txt  v521_note.txt
configs/: adapter_samples.v591_v620.json  api_football_adapter.v36.json  baseline_training_evaluation.v281_v290.json  baseline_training_reports.v331_v340.json  beta_open_walk_gui.v491_v500.json  beta_release_train.v181_v228.json  beta_workflow.v173_v180.json  bookmaker_market_contract.v30.json  bronze_candidate_preview.v249.json  bronze_preview_classification.v250.json  bronze_preview_field_schema.v251.json  bronze_snapshot_cache.v236.json  bronze_validation_batch.v252.json  calibration_clv_reports.v341_v350.json  canonical_resolver.v33.json  competition_core.v79_v86.json  dashboard.v49.json  data_foundation.v87_v94.json  data_source_expansion.v571_v590.json  desktop_beta.v125_v132.json  desktop_beta_release_readiness.v471_v480.json  desktop_beta_ui.v133_v140.json  desktop_bronze_validation_surface.v252.json  desktop_downloads.v149_v156.json  desktop_gui_bridge.v50_v52.json  desktop_local_foundation.v58_v61.json  desktop_package_readiness.v57.json  desktop_rc_packaging.v62.json  desktop_release_artifacts.v481_v490.json  do_not_forget_plan_v521.json  eval_gate_scaffold.v553_v570.json  external_data.v165_v172.json  feature_builder_v1.v801_v830.json  feature_leak_paper.v39_v41.json  feature_live_contract.v29.json  final_gui_market_terminal.v231.json  final_gui_market_terminal.v232.json  football_data_batch_001.v941_v960.json  football_data_batch_002.v991_v1030.json  football_data_batch_003.v1031_v1060.json  (+80 more)
cpp-core/: omnibet.cpp
data/: sample_closing_odds_spain_cape_verde.csv  sample_prices.csv  unified_intl_matches.csv
docs/: adapter_samples_v591_v620.md  architecture_v1.md  baseline_training_evaluation_v281_v290.md  baseline_training_reports_v331_v340.md  bet_builder_v3b.md  beta_open_walk_gui_v491_v500.md  beta_release_train_v181_v228.md  beta_vs_model_quality_policy.md  bronze_candidate_preview_v249.md  bronze_preview_classification_v250.md  ci.md  ci_probe.md  (+192 more)
rust-core/: 123.txt  Cargo.toml
rust-core/src/: adapter_file_parsers_v651.rs  adapter_normalizer_v621.rs  baseline_eval_report_v961.rs  baseline_eval_v281.rs  baseline_reports_v331.rs  bronze_cache.rs  bronze_candidate_v249.rs  bronze_classify_v250.rs  bronze_field_schema_v251.rs  bronze_validation_v252.rs  calibration_clv_v341.rs  competition_eval.rs  competition_report.rs  entity_map_v239.rs  feature_count_gate_v921.rs  football_data_import_v891.rs  gold_model.rs  green_sample_v351.rs  historical_dataset_v271.rs  historical_file_manifest_v247.rs  historical_import_v245.rs  historical_materialization_v411.rs  historical_plan_v246.rs  historical_source_import_v401.rs  historical_sources_v247.rs  historical_verify_v248.rs  identity_mapping.rs  identity_mapping_v239.rs  idmap_v239.rs  inference.rs  lib.rs  linear_model.rs  local_data_core.rs  local_import_runner_v361.rs  local_materialization_v301.rs  local_runtime.rs  main.rs  market_patch_v242.rs  market_registry.rs  market_terminal_v291.rs  (+19 more)
tauri-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/src/: main.rs
(+425 files in other folders)
