[package]
name = "omnibet_lab_core"
version = "0.17.0"
edition = "2021"

[lib]
name = "omnibet_lab_core"
path = "src/lib.rs"

[[bin]]
name = "omnibet-core"
path = "src/main.rs"

[[bin]]
name = "omnibet-pack"
path = "src/bin/omnibet-pack.rs"

[[bin]]
name = "omnibet-infer"
path = "src/bin/omnibet-infer.rs"

[[bin]]
name = "omnibet-value"
path = "src/bin/omnibet-value.rs"

[[bin]]
name = "omnibet-model"
path = "src/bin/omnibet-model.rs"

[[bin]]
name = "omnibet-bronze-cache"
path = "src/bin/omnibet-bronze-cache.rs"

[[bin]]
name = "omnibet-local-import-runner"
path = "src/bin/omnibet-local-import-runner.rs"

[[bin]]
name = "omnibet-historical-materialization-runner"
path = "src/bin/omnibet-historical-materialization-runner.rs"

[[bin]]
name = "omnibet-materialized-storage-hasher"
path = "src/bin/omnibet-materialized-storage-hasher.rs"

[[bin]]
name = "omnibet-sample-pack-runner"
path = "src/bin/omnibet-sample-pack-runner.rs"

[[bin]]
name = "omnibet-football-data-importer"
path = "src/bin/omnibet-football-data-importer.rs"

[[bin]]
name = "omnibet-feature-count-gate"
path = "src/bin/omnibet-feature-count-gate.rs"

[[bin]]
name = "omnibet-baseline-eval"
path = "src/bin/omnibet-baseline-eval.rs"

[dependencies]
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
zstd = "0.13"
